# sporks

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bot.h  config-example.json  config.cpp  config.h  database.cpp  database.h  do-web-requests.php  duk_config.h  duktape.c  help.cpp  help.h  includes.h  infobot.cpp  infobot.h  js.cpp  js.h  mail-core-file.sh  main.cpp  make-core-file.sh  modules.cpp  modules.h  modules.json  queue.h  readline.cpp  readline.h  regex.cpp  response.cpp  response.h  rss.cpp  rss.h  run.sh  signal.cpp  static_timeout.h  status.cpp  (+9 more)
.circleci/: config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
buildtools/cmake/: FindMYSQL.cmake
help/: access-denied.json  advanced.json  basic.json  config.json  error.json  invalid-set-var-or-value.json  invite.json  missing-parameters.json  missing-set-var-or-value.json
hooks/: install.sh  pre-commit  pre-commit.php
include/sporks/: bot.h  config.h  database.h  includes.h  modules.h  regex.h  statusfield.h  stringops.h
lib/websocketpp/websocketpp/: version.hpp
lib/websocketpp/websocketpp/http/impl/: response.hpp
lib/websocketpp/websocketpp/transport/asio/: connection.hpp  endpoint.hpp
lib/websocketpp/websocketpp/transport/asio/security/: none.hpp  tls.hpp
modules/: config.cpp  diagnostics.cpp  help.cpp  infobot.cpp  infobot.h  js.cpp  js.h  readline.cpp  response.cpp  status.cpp  timeout.c
modules/bandwidth/: bandwidth.cpp
modules/config/: config.cpp
modules/diagnostics/: diagnostics.cpp
modules/help/: help.cpp
modules/infobot/: backend.cpp  backend.h  infobot.cpp  infobot.h  queue.h  readline.cpp  response.cpp  status.cpp
modules/js/: js.cpp  js.h  timeout.c
modules/presence/: presence.cpp
modules/sqlcache/: sqlcache.cpp
modules/voting/: voting.cpp
mysql-schema/: botnix-infobot-discord.sql  infobot.sql
src/: config.cpp  database.cpp  events.cpp  main.cpp  modules.cpp  regex.cpp  signal.cpp  statusfield.cpp  stringops.cpp
